--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
+    "@material/card": "^8.0.0",
     "axios": "^0.21.0",
     "cordova-sqlite-storage": "^5.1.0",
     "rxjs": "~6.5.5",
